{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "FirstPersonMovement",
            "id": "a16e8f9c-8c9b-4650-a5c7-179311c035f9",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "2135e35e-fd72-49d1-ba56-1ba399e15d79",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Looking",
                    "type": "PassThrough",
                    "id": "0a048e48-4b37-4dac-a2ff-8bab1c05d739",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "f6ca1dea-982b-4b96-bd3c-b590b1c7fb70",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f3222754-c122-4ca8-ada1-9878926df90d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e2cae8da-7650-44c8-8549-e44df9d9c63f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ee43eae9-1f4a-452a-a52d-1f5ffb8cb459",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fa087970-8074-4f5a-826d-0f4704bc3ac5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "db9afa6a-98e6-4af9-b221-8b2d05f0623d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6ef3a6de-8dc7-48a4-9cdb-efa210c3aa93",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Looking",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf5fec23-0682-45bb-a5b1-015ae42f8404",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interaction",
            "id": "04ad6b67-a4b8-4a23-9be1-99d65fcb3492",
            "actions": [
                {
                    "name": "QuiteInteraction",
                    "type": "Button",
                    "id": "fe75e4d8-15b8-47e1-9082-ba20732599fb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d70d470b-f922-4d97-9fef-70aa36e762a1",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuiteInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}